test/errors/type/bool/tostr.yasl

mt.lookup(true, .tostr)(1)
